--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
 
-    <script type="text/javascript" src="components/ContactForm.js"></script>
-    <script type="text/javascript" src="components/Contact.js"></script>
-    <script type="text/javascript" src="components/Contacts.js"></script>
-    <script type="text/javascript" src="components/App.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/babel" src="components/ContactForm.js"></script>
+    <script type="text/babel" src="components/Contact.js"></script>
+    <script type="text/babel" src="components/Contacts.js"></script>
+    <script type="text/babel" src="components/App.js"></script>
+    <script type="text/babel" src="script.js"></script>
   </body>
 </html>
